# scihuberAuto

./: pyproject.toml  readme.md
src/scihuberauto/: __main__.py
