[project]
name = "scihuberAuto"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mokurin000", email = "1348292515a@gmail.com"},
]
dependencies = [
    "playwright>=1.46.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
